--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,3 +1,8 @@
+:root{
+  --gap: 1em;
+  --index: calc(1vw + 1vh);
+  --color-dark: #000;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-dark);
 }
 
 code {
