--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -5,10 +5,10 @@
 }
 .button{
     display: inline-block;
-    padding: 8px 10px;
+    padding: 5px 10px;
     font-size: calc(var(--index) * .9);
-    background-color: #fff;
-    color: var(--color-dark);
+    background-color: #000;
+    color: #fff;
     border-radius: 8px;
     margin-right: 10px;
 }
