--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -11,6 +11,7 @@
     color: #fff;
     border-radius: 8px;
     margin-right: 10px;
+    cursor: pointer;
 }
 .button:hover{
     box-shadow: 5px 3px 3px #8300cc;
