--- a/src/components/ModalForm/ModalForm.module.scss
+++ b/src/components/ModalForm/ModalForm.module.scss
@@ -4,7 +4,9 @@
     background-color: #fff;
     color: #000;
     padding: 20px;
-
+}
+.modal:hover{
+    box-shadow: 5px 3px 3px #8300cc;
 }
 .title{
     display: flex;
