--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -15,12 +15,15 @@
     justify-content: space-between;
 }
 .title{
-    font-size: calc(var(--index) * 1.3);
+    font-size: calc(var(--index) * .8);
 }
 .btns{
-    width: 15%;
+    width: 30%;
     display: flex;
     justify-content: space-between;
+    font-size: calc(var(--index) * 6);
+}
+.btns button{
     font-size: calc(var(--index) * 1.5);
 }
 span{
